完成了登录和注册功能的开发

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -13,9 +13,9 @@ body {
   height: 310px;
   background-color: #fff;
   position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  left: 50%;    /* 水平居中，基于父元素左边缘 */
+  top: 50%;     /* 垂直居中，基于父元素顶部边缘 */
+  transform: translate(-50%, -50%); /* 使用transform属性结合translate函数进行精确的居中定位 */
 }
 
 .title-box {
@@ -28,7 +28,7 @@ body {
 }
 
 .layui-form {
-  padding: 0 30px;
+  padding: 0 30px;    /*上、下内边距为 0 像素，而左、右内边距为 30 像素。*/
 }
 
 .links {
@@ -36,20 +36,20 @@ body {
   justify-content: flex-end;
 }
 
-.links a {
+.links a{
   font-size: 12px;
 }
 
-.layui-form-item {
+.layui-form-item{
   position: relative;
 }
 
-.layui-icon {
+.layui-icon{
   position: absolute;
   left: 10px;
   top: 10px;
 }
 
-.layui-input {
+.layui-input{
   padding-left: 32px;
 }
